<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_check_box_radio_button"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="group9.tcss450.uw.edu.widgetslab.CheckBoxRadioButtonActivity">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/customborder"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/radioYes" />

        <RadioButton
            android:id="@+id/radioNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/radioNo" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/customborder"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/checkboxCheese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toppingCheese" />

        <CheckBox
            android:id="@+id/checkboxMeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toppingMeat" />

        <CheckBox
            android:id="@+id/checkboxSauce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toppingSauce" />

        <CheckBox
            android:id="@+id/checkboxVegetables"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toppingVegetables" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/fab_margin"
        android:text="@string/submit"
        android:onClick="submit"/>

</RelativeLayout>
